<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <android.support.v7.widget.CardView
            android:id="@+id/card_header"
            android:layout_gravity="center_horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_max="650dp"
            android:layout_margin="16dp">
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/iv_main_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@mipmap/img_lunch_2x"
                    android:contentDescription="@string/cd_recipe_main_image" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/background_image_mask"
                    app:layout_constraintTop_toTopOf="@id/iv_main_image"
                    app:layout_constraintBottom_toBottomOf="@id/iv_main_image"
                    app:layout_constraintLeft_toLeftOf="@id/iv_main_image"
                    app:layout_constraintRight_toRightOf="@id/iv_main_image"/>

                <TextView
                    android:id="@+id/tv_recipe_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:textSize="24sp"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="@id/iv_main_image"
                    app:layout_constraintLeft_toLeftOf="@id/iv_main_image"
                    app:layout_constraintRight_toRightOf="@id/iv_main_image"
                    android:text="@string/title_recipe_name"/>

                <View
                    android:id="@+id/aligner_fab"
                    android:visibility="invisible"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="@id/iv_main_image"
                    app:layout_constraintTop_toBottomOf="@id/iv_main_image"
                    app:layout_constraintBottom_toTopOf="@id/iv_main_image"/>
                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_local_dining_white_24dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toBottomOf="@id/aligner_fab"
                    app:layout_constraintBottom_toTopOf="@id/aligner_fab"
                    app:layout_constraintRight_toRightOf="@id/iv_main_image"/>

                <TextView
                    android:id="@+id/tv_ingredients_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="32dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/title_ingredients"
                    app:layout_constraintTop_toBottomOf="@id/iv_main_image"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/iv_expand_ingredients"/>

                <ImageView
                    android:id="@+id/iv_expand_ingredients"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_expand_more_black_24dp"
                    android:tint="@android:color/darker_gray"
                    app:layout_constraintTop_toBottomOf="@id/tv_ingredients_title"
                    app:layout_constraintBottom_toTopOf="@id/tv_ingredients_title"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_margin="16dp"
                    android:contentDescription="@string/cd_expand_ingredients"/>

                <View
                    android:id="@+id/div_ingredients"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintTop_toBottomOf="@id/tv_ingredients_title"
                    app:layout_constraintLeft_toLeftOf="@id/tv_ingredients_title"
                    app:layout_constraintRight_toRightOf="@id/iv_expand_ingredients"/>

                <View
                    android:id="@+id/click_area_ingredients"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="?selectableItemBackground"
                    app:layout_constraintTop_toBottomOf="@id/iv_main_image"
                    app:layout_constraintBottom_toTopOf="@id/div_ingredients"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>

                <LinearLayout
                    android:id="@+id/content_ingredients"
                    android:orientation="vertical"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/div_ingredients">

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_steps_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/title_steps"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/iv_expand_steps"
                    app:layout_constraintTop_toBottomOf="@+id/content_ingredients"
                    app:layout_constraintBottom_toBottomOf="@id/click_area_steps"/>

                <ImageView
                    android:id="@+id/iv_expand_steps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_expand_more_black_24dp"
                    android:tint="@android:color/darker_gray"
                    app:layout_constraintTop_toBottomOf="@id/tv_steps_title"
                    app:layout_constraintBottom_toTopOf="@id/tv_steps_title"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_margin="16dp"
                    android:contentDescription="@string/cd_expand_steps"/>

                <View
                    android:id="@+id/div_steps"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="16dp"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintTop_toBottomOf="@id/tv_steps_title"
                    app:layout_constraintLeft_toLeftOf="@id/tv_steps_title"
                    app:layout_constraintRight_toRightOf="@id/iv_expand_steps"/>

                <View
                    android:id="@+id/click_area_steps"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="?selectableItemBackground"
                    app:layout_constraintTop_toBottomOf="@id/content_ingredients"
                    app:layout_constraintBottom_toTopOf="@id/div_steps"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>

                <LinearLayout
                    android:id="@+id/content_steps"
                    android:orientation="vertical"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_steps_title"
                    app:layout_constraintBottom_toBottomOf="parent">
                    <!--<android.support.v7.widget.AppCompatCheckBox-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginLeft="16dp"-->
                    <!--android:layout_marginRight="16dp"-->
                    <!--android:layout_marginBottom="16dp"/>-->
                </LinearLayout>
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>
    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>