<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/img_lunch_2x"
            android:adjustViewBounds="true"
            android:contentDescription="@string/cd_recipe_main_image"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/background_image_mask"
            app:layout_constraintTop_toTopOf="@id/iv_image"
            app:layout_constraintBottom_toBottomOf="@id/iv_image"
            app:layout_constraintLeft_toLeftOf="@id/iv_image"
            app:layout_constraintRight_toRightOf="@id/iv_image"/>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="24sp"
            android:textColor="@android:color/white"
            android:text="@string/title_recipe_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>